Started Working on The User and Fixed Form Width on Mobile

--- a/client/src/sass/_forms.scss
+++ b/client/src/sass/_forms.scss
@@ -39,7 +39,7 @@
 }
 @media only screen and (max-width: 768px) {
   .container {
-    .login {
+    .container__form {
       width: 100%;
     }
   }
